# oompy

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: github-pytest.yml
oom/: __init__.py  oom.py  test_oom.py  utils.py
oompy/: __init__.py  constants.py  oom.py  test_oom.py  units.py
