[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oompy"
dynamic = ["version"]
dependencies = ["types-setuptools", "numpy", "scipy", "sympy", "matplotlib"]
requires-python = ">=3.8"
authors = [{ name = "Hayk", email = "haykh.astro@gmail.com" }]
maintainers = [{ name = "Hayk", email = "haykh.astro@gmail.com" }]
description = "Tools for working with physical units and quantities"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
"Development Status :: 5 - Production/Stable",
"Intended Audience :: Science/Research",
"Intended Audience :: Education",
"Topic :: Scientific/Engineering :: Physics",
"Topic :: Scientific/Engineering :: Astronomy",
"License :: OSI Approved :: BSD License",
"Programming Language :: Python :: 3 :: Only",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/haykh/oompy"

[tool.hatch.version]
path = "oompy/__init__.py"