[metadata]
name = oompy
version = 1.3.0
description = Tools for working with physical units and quantities
author = morninbru
author_email = haykh.astro@gmail.com
license = BSD 3-Clause License
url = https://github.com/haykh/oom

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
install_requires =
  types-setuptools